Stage 4: New tests for ZonePartitions